# SBOM-Security

./: .gitignore  .pre-commit-hooks.yaml  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: policy.example.yaml
core/: __init__.py  banner.py  baseline.py  compliance.py  cvss.py  cyclonedx.py  drift.py  engine.py  licenses.py  logger.py  models.py  osv.py  policy.py  purl.py  reporter.py  spdx.py  version.py
parsers/: __init__.py  base.py  go.py  maven.py  node.py  python.py
tests/: test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_sbom.py
