[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbom-security"
version = "0.1.0"
description = "Generate CycloneDX SBOMs, correlate components with vulnerabilities, and track dependency drift across Python, Node, Maven, and Go projects."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Krishnendu De" }]
keywords = ["sbom", "cyclonedx", "supply-chain", "sca", "vulnerability", "appsec"]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "structlog>=23.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
sbom-security = "main:cli"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["core*", "parsers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
